# orange3-imagenets

./: .gitignore  Makefile  README.md  pyproject.toml
orangecontrib/imagenets/util/: image_table.py
orangecontrib/imagenets/widgets/: __init__.py  ow_image_augmenter.py  ow_image_preprocessor.py  ow_image_train_and_score.py  ow_imagenet_builder.py  ow_imagenet_classify.py  ow_load_imagenet.py  ow_save_imagenet.py
workflows/: .basic.ows.swp.p
